--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
         run: poetry install
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
+      - name: Install pylint
+        run: poetry add pylint --group dev
       - name: Run pylint check
         run:  poetry run pylint src
       - name: Coverage report
