--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = ""
 authors = ["Matti Luukkainen"]
 readme = "README.md"
 
+[tool.pylint]
+jobs = "10"
+
 [tool.poetry.dependencies]
 python = "^3.10"
 
